# compile

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
compile/ml/: DATA.md  Makefile  pyproject.toml
compile/ml/autoresearch/: autoresearch_wrapper.sh
compile/ml/autoresearch_connectome/: analysis.py  prepare_connectome.py  requirements.txt
compile/ml/compile/: __init__.py  constants.py  data.py  evolve.py  fitness.py  hub_surgery.py
compile/ml/experiments/controls/: critical_controls.py  izh_persistence_test.py
compile/ml/experiments/core/: bulletproof_evolution.py  exp6_developmental_compiler.py  exp6_gene_guided.py  expA_prediction.py
compile/ml/experiments/cross_species/: exp5_microns.py
compile/ml/experiments/exploratory/: architecture_evolution.py  behavior_manifold_fast.py  curvature_retest.py  exp1_developmental_genes.py  exp2_plasticity_training.py  exp4_composition.py  izh_attention.py  izh_conflict_resolution.py
compile/ml/experiments/legacy/: README.md  behavior_manifold.py  brian2_crossval_v2.py  dreaming_v2.py  gauge_theory_v2.py  mouse_pipeline_v2.py  novel_behaviors.py  validate_gauge_theory.py  verify_evolved_brain.py
compile/ml/models/: izhikevich_brain.py
compile/ml/results/: NEXT_EXPERIMENTS.md  exp6a.json  exp9.json
compile/ml/results/exp6_structured_growth/: winner_take_all.txt
compile/ml/scripts/: calibrate_all_architectures.py  compute_module_labels.py
compile/ml/tests/: conftest.py  test_evolve.py  test_fitness.py  test_simulate.py
compile/ml/worker/: jobs.py  requirements.txt  server.py
(+254 files in other folders)
