[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compile"
version = "0.1.0"
description = "Directed evolution on biological connectomes"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.10"
authors = [
    {name = "Mohamed El Tahawy"},
]
dependencies = [
    "torch>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "scipy>=1.10,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
mouse = [
    "caveclient>=5.0",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[tool.setuptools.packages.find]
include = ["compile*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # line length handled by formatter
